[gd_scene load_steps=2 format=3 uid="uid://dllar88mbeg6w"]

[ext_resource type="Script" path="res://EuBraBo/Script/menu.gd" id="1_xc25y"]

[node name="Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xc25y")

[node name="fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.324203, 0.324203, 0.324203, 1)

[node name="menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="new game" type="Button" parent="menu"]
layout_mode = 2
text = "new game"

[node name="continued" type="Button" parent="menu"]
layout_mode = 2
text = "continued"

[node name="opctions" type="Button" parent="menu"]
layout_mode = 2
text = "opctions"

[node name="Exit" type="Button" parent="menu"]
layout_mode = 2
text = "Exit"

[node name="opcions" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="opcions" type="VBoxContainer" parent="opcions"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="video" type="Button" parent="opcions/opcions"]
layout_mode = 2
text = "video"

[node name="Creditos" type="Button" parent="opcions/opcions"]
layout_mode = 2
text = "Credito"

[node name="BackFromOpctions" type="Button" parent="opcions"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="video" type="HBoxContainer" parent="video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -26.0
offset_right = 20.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2

[node name="lebels" type="VBoxContainer" parent="video/video"]
layout_mode = 2
size_flags_horizontal = 4

[node name="FullScreen" type="Label" parent="video/video/lebels"]
layout_mode = 2
text = "FullScreen"

[node name="Borderless" type="Label" parent="video/video/lebels"]
layout_mode = 2
text = "Borderless"

[node name="checkBoxs" type="VBoxContainer" parent="video/video"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="video/video/checkBoxs"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="video/video/checkBoxs"]
layout_mode = 2

[node name="BackFromVIdo" type="Button" parent="video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="creditos" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackFromCreditos" type="Button" parent="creditos"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="menu/opctions" to="." method="_on_opctions_pressed"]
[connection signal="pressed" from="menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="opcions/opcions/video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="opcions/opcions/Creditos" to="." method="_on_creditos_pressed"]
[connection signal="pressed" from="opcions/BackFromOpctions" to="." method="_on_back_from_opctions_pressed"]
[connection signal="toggled" from="video/video/checkBoxs/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="video/video/checkBoxs/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="pressed" from="video/BackFromVIdo" to="." method="_on_back_from_v_ido_pressed"]
[connection signal="pressed" from="creditos/BackFromCreditos" to="." method="_on_back_from_creditos_pressed"]
